# BetterClasscharts

./: README.md  build.sh  buildozer.spec  main.py  pull_licenses.py  pyproject.toml  requirements.txt
.github/screenshots/gimp/: darkmode-lightmode.xcf  themes.xcf  timetable.xcf
server/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
server/src/: main.go
server/src/endpoints/: endpoints.go
server/src/paths/: login.go  ping.go  shared.go
server/src/shared/: shared.go
src/: .gitignore  globals.py  main.py  util.py
src/api/: __init__.py  client.py  http_methods.py  student_client.py  sync_client.py
src/handlers/: desc_parser.py  display_activity.py  display_homework.py  display_homework_details.py  display_homework_tiles.py  display_timetable.py  login_handler.py  open_file.py  open_image.py  open_url.py  settings.py  sync.py
src/res/: .gitignore  splash_screen.xcf
src/tests/: README.md  api_tests.py  date_test.py  homework_response.json  login_kv_test.py  variable_height.py
src/views/: main.kv
src/views/kv/: about.kv  activity_screen.kv  appearance.kv  attachment_tile.kv  dev.kv  homework.kv  homework_details.kv  homework_sorter.kv  image_screen.kv  loading_circle_screen.kv  login.kv  main.kv  settings.kv  splash_screen.kv  sync.kv
src/views/kv/timetable/: day_tile.kv  lesson_tile.kv  timetable.kv
src/views/py/: about.py  activity.py  appearance.py  attachment_tile.py  dev_screen.py  homework_details.py  homework_sorter.py  homework_view.py  image_screen.py  login.py  settings.py  sync.py
src/views/py/timetable/: day_tile.py  (+2 more)
