[tool.poetry]
name = "BetterClasscharts"
version = "0.1.0"
description = "An alternative to the Classcharts student app."
authors = ["Oscar Peace <oscar@oscarcp.net>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
kivy = "2.1.0"
kivymd = {git = "https://github.com/kivymd/KivyMD.git", rev = "3c12b7bdbeae456f3cfee69d9b40882ed9940363"}
requests = "2.27.1"
pyjnius = "1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
